Make table content 80vh

--- a/websocket.html
+++ b/websocket.html
@@ -20,7 +20,7 @@
         vertical-align: top;
     }
     div.spitcontent {
-        height: 300px;
+        height: 80vh;
         overflow-y: auto;
         display: flex;
         flex-direction: column-reverse;
@@ -42,7 +42,6 @@
         border-bottom: 1px solid #f0f0f0;
     }
 </style>
-<h2>WebSocket Test</h2>
 <textarea cols=60 rows=6></textarea>
 <button action="send">send</button>
 <button action="connect">connect</button>
