--- a/BuildService/websocket.html
+++ b/BuildService/websocket.html
@@ -139,7 +139,7 @@
         buttonConnect = document.querySelector("button[action=connect]"),
         output = document.querySelector("#output"),
         textarea = document.querySelector("textarea"),
-        wsUri = "ws://127.0.0.1:8090",
+        wsUri = "$WEBSOCKET_URL",
         websocket = null;
     button.addEventListener("click", onClickButton);
     buttonConnect.addEventListener("click", onClickButtonConnect);
